# ballmatro

./: .gitignore  README.md  generate_datasets.py  pyproject.toml  reoptimize_dataset.py  reoptimize_results.py  test_gpt_dataset.py  test_llm_dataset.py  train_llm_dataset.py
ballmatro/: card.py  generators.py  hands.py  optimizer.py  score.py
benchmarks/: level1_Gemma3-270M.json  level1_Qwen2-0.5B-Instruct.json  level1_Qwen2.5-0.5B-Instruct-SFT.json  level1_Qwen2.5-0.5B-Instruct.json  level1_Qwen2.5-1.5B-Instruct.json  level1_Qwen2.5-32B-Instruct.json  level1_Qwen2.5-3B-Instruct.json  level1_Qwen2.5-7B-Instruct.json  level1_Qwen3-0.6B.json  level1_Qwen3-4B-Thinking-2507.json  level1_gpt-4.1-nano-2025-04-14.json  level1_gpt-4o-2024-08-06.json  level1_gpt-4o-mini-2024-07-18.json  level1_gpt-5-nano-2025-08-07.json  level2-Qwen2.5-0.5B-Instruct-SFT.json  level2_Qwen2-0.5B-Instruct.json  level2_Qwen2.5-0.5B-Instruct.json  level2_Qwen2.5-1.5B-Instruct.json  level2_Qwen2.5-14B-Instruct.json  level2_Qwen2.5-32B-Instruct.json  level2_Qwen2.5-3B-Instruct.json  level2_Qwen2.5-7B-Instruct.json  level2_Qwen3-0.6B.json  level2_Qwen3-8B.json  level2_gpt-4.1-2025-04-14.json  level2_gpt-4.1-mini-2025-04-14.json  level2_gpt-4.1-nano-2025-04-14.json  level2_gpt-4o-2024-08-06.json  level2_gpt-4o-mini-2024-07-18.json  level2_gpt-5-nano-2025-08-07.json  level2_gpt-oss-120b.json  level2_gpt-oss-20b.json  level2_o4-mini-2025-04-16.json  level3_Qwen2-0.5B-Instruct.json  level3_Qwen2.5-0.5B-Instruct-SFT.json  level3_Qwen2.5-0.5B-Instruct.json  level3_Qwen2.5-1.5B-Instruct.json  level3_Qwen2.5-14B-Instruct.json  (+57 more)
configs/: lora_a100.json  (+1 more)
(+21 files in other folders)
