[tool.poetry]
name = "ballmatro"
version = "0.1.0"
description = "A challenging task for LLMs in which they need to create high-scoring Ballatro-like hands"
authors = ["Álvaro Barbero Jiménez"]

[tool.poetry.dependencies]
python = "^3.13"
pytest = "^6.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.241"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = ["E", "F", "W"]
ignore = ["E501"]
