[tool.poetry]
name = "ballmatro"
version = "0.1.5"
description = "A challenging task for LLMs in which they need to create high-scoring Ballatro-like hands"
authors = ["Álvaro Barbero Jiménez"]
readme = "README.md"

[tool.poetry.dependencies]
datasets = "^3.6.0"
python = ">=3.9,<3.14"

[tool.poetry.group.dev.dependencies]
huggingface_hub = "^0.31.2"
pytest = "^8.3"
pytest-cov = "^6.0.0"
ruff = "^0.0.241"
openai = "^1.98.0"
ipykernel = "^6.30.0"
plotly = "^6.2.0"
nbformat = "^5.10.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = ["E", "F", "W"]
ignore = ["E501"]
